--- a/osc/papers/2014.md
+++ b/osc/papers/2014.md
@@ -1,9 +1,4 @@
 # Question 1
-> Describe how, in your opinion, recent developments in computer architecture and computer design  
-> have influenced operating system design. Include aspects on processes management,  
-> memory management, file system design, and disks.  
-> [10 marks - comprehension]
-
 1. Process management
   - Greater processing power and more memory = ability to multiprocess
   - OS needs to provide APIs for creating and managing user processes
@@ -26,16 +21,10 @@ in memory = implement paging
   - Order queued operations to try to maximise use in one movement of the read/write head
 
 # Question 2
-> Keeping in mind the implementation differences between threads and processes on an operating  
-> system level, explain why thread creation and switching are faster than process creation and  
-> switching.  
-> [3 marks - comprehension]
-
 - Threads share more things between each other - data, code and files
 - This means context switching from one thread to another (of same process) has less overhead
 - The address space remains the same between them
 
->In which situations would you favour user level threads ? In which situations would you favour kernel level threads. Explain your answer. [2 marks - comprehension]
 
 1. User-level threads
   - Where maximum performance is required - avoids system calls which trigger context switching
@@ -44,16 +33,11 @@ in memory = implement paging
 2. Kernel-level threads
   - In most other cases - API is simpler to use for programmers
 
-> Round Robin is said to favour CPU bound processes over I/O bound processes.  
-> Explain why may this be the case (if this is the case at all)  
-> [2 marks - comprehension] 
 
 - RR loops around the queue, executing each process in turn (maybe with time slice)
 - I/O bound processes will use little of their allocated time, yet have to wait for all CPU bound 
 processes to take their turn
 
-> Illustrate the use of round robin, shortest job first, and highest priority first scheduling  
-> algorithms for the processes given below (all processes arrive at the same time). 
 
 1. Scheduling timeline (time slice = 50)
   - SJF:
@@ -81,17 +65,11 @@ processes to take their turn
 2. Average response time
 
 # Question 3
-> Explain why hard links do not work across different machines
-> [2 marks - comprehension]
 
 Hard links refer to the i-node of the file that they point to.  
 Since these differ between filesystems, if a hard link is copied to another filesystem, it is
 highly unlikely that the copy will refer to the desired file
 
-> Cylinder skew adds an offset to the sectors on adjacent cylinders on traditional magnetic hard
-> drives. If a disk rotates at 10000 rpm, the seek time between two adjacent cylinders is 1
-> millisecond, and each track contains 600 sectors, how many sectors should the cylinder skew be?
-> [2 marks - comprehension] 
 
 10,000 rpm = 1000/6 rps
 1 ms = 0.001 s
@@ -99,11 +77,6 @@ so 1 ms causes 1/6 of a revolution
 1/6 *600 = 10 sectors passed in 1 ms
 So cylinder skew should be 10 sectors
 
-> Consider a disk with 300 tracks, and the following sequence of requested tracks 
-> 61, 149, 230, 48, 216, 54, 192, 262, 220, 255. 
-> Calculate the number of tracks crossed when the following algorithms are used.
-> Assume that the disk starts at position 66 and is moving in the up position (i.e. 1 to 300).
-> [6 marks - application]
 
 1. FCFS
   - 61 = +5
@@ -134,29 +107,72 @@ So cylinder skew should be 10 sectors
 3. Circular scan w/ look
 
 # Question 4
-> Briefly describe 3 contiguous memory schemes based on partitioning.
-> [6 marks - knowledge] 
 
-> What is thrashing? Explain why it can happen.
-> [2 marks - comprehension]
 
 Thrashing in when an OS repeatedly swaps memory pages in and out of main memory and the swap
 storage as they are requested.  
 This can occur in scenarios of high memory usage where all pages are in use.
 
-> Describe the principle behind address relocation. Why is it necessary and why is it useful?” [4 marks -k 
 
-> Out of the following four scheduling algorithms, which one can lead to starvation: FCFS , shortest job first , round robin , highest priority first ? Explain your answer.” [2 mark -c
+When compiling, programs don't know where in the address space of a computer they will be loaded
+when they are run.  
+To work around this, they simply assume they will start at 0x0 - all static addresses used in the
+program will be relative to 0x0.  
+The program relies upon the OS to translate these static addresses to the real address in memory
+by adding an offset - the first memory address into which the program was loaded.
 
-> Consider a computer that has 1 GB of memory . 200 Mb is reserved for the operating system , and each process takes on average 200Mb . By how much would you expect the CPU utilization to increase by adding an additional gigabyte of memory ? Assume that the I/O rate is 80% and that each additional process takes up 200Mb.” [2 marks - a] 
+
+SJF and highest priority can lead to starvation since they re-order the ready queue as new 
+processes arrive.  
+In SJF, longer jobs are starved if jobs shorter than them keep being queued.  
+In highest priority with static priorities, lower priority jobs are starved if higher priority ones
+keep being queued.
+
 
 # Question 5
 
-> Explain virtual memory with paging . Include an explanation of address translation work in a paged system with virtual memory and a single level page table . Illustrate your answers where possible.” [9 marks - c] 
 
-> Is the page table of a process updated in user or in kernel mode? Explain your answer. ” [2 marks -c] 
+Programs refer to virtual memory whenever they reference memory addresses.  
+These addresses do not refer directly to physical memory addresses; the limit for virtual addresses
+is caused only by the max value that can be stored in a register (2^64 on a 64-bit system).  
+In order to be able to handle requests for addresses outside of the range of the physical memory
+available, an OS needs to convert virtual into physical memory addresses. 
+This is done using a page table.  
+The page table breaks down memory into contiguous blocks of fixed sizes. Ranges of memory addresses
+each refer to a different page. 
+The first x bits of the address can determine the page number, and the last y bits determine the offset 
+within that page. x - and thus y - vary depending on page size.
+Page number is then converted to frame number (in physical memory) through the page table.
+Since there is usually a much larger virtual memory space than physical, some memory data is stored
+on a hard disk in 'swap space'. When an address in a page not in physical memory is requested 
+(page fault) it 'swapped' into physical memory by replacing the last frame that has been accessed 
+in physical memory. That is, the one that has least been used.
 
 
-> Consider the following decimal addresses: 24575, 29645, and 44719. What are their virtual page numbers and offsets for a 4KB page size?” [3 marks - a] 
+In kernel mode. If a process were able to update its own page table (in user mode) they would be
+able to access any other process' memory, which would be a huge security issue.
 
-> Translation look aside buffers are used to speed up address translation. Assuming the following numbers/access times A 12ns associative TLB lookup A 150ns memory access time A single level page table Calculate the access time for a TLB hit, a TLB miss, and the estimated access time and slowdown for a 95% hit rate. ” [3 marks - a] 
+
+1. 24575
+  - /4096 = 5 rem 4095
+  - Page: 5, offset: 4095
+
+2. 29645
+  - /4096 = 7 rem 973
+  - Page: 7, offset: 973
+
+3. 44719
+  - /4096 = 10 rem 3759
+  - Page: 7, offset: 3759
+
+
+1. Hit
+  - 12ns TLB lookup
+  - 150ns memory access to read value
+  - Total: 162ns
+
+2. Miss
+  - 12ns TLB lookup
+  - 150ns to check page table for desired address
+  - 150ns to get value at address 
+  - Total: 312ns
